# likwid-marker-rs

./: Cargo.toml  README.md  build.rs
src/: lib.rs
