[package]
name = "likwid-marker"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
links = "likwid"
description = "Bindings for the LIKWID marker API"
repository = "https://github.com/tnibler/likwid-marker-rs"
homepage = "https://github.com/tnibler/likwid-marker-rs"
categories = ["development-tools::profiling"]
keywords = ["likwid", "profiling", "perf", "performance counter"]
readme = "README.md"

[dependencies]

[build-dependencies]
cc = "1.1.22"
pkg-config = "0.3.31"

[features]
default = ["enable"]
enable = []
